--- a/css-grid/alura-grid-layout/index.html
+++ b/css-grid/alura-grid-layout/index.html
@@ -10,6 +10,9 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <link href="./assets/css/destaques.css" rel="stylesheet">
     <link href="./assets/css/populares.css" rel="stylesheet">
+    <link href="./assets/css/menu.css" rel="stylesheet">
+    <link href="./assets/css/rodape.css" rel="stylesheet">
+    <link href="./assets/css/responsivo.css" rel="stylesheet">
 </head>
 <body class="app">
     <header class="cabecalho">
@@ -384,8 +387,8 @@
                 </div>
             </div>
         </section>
-        <footer class="rodape">rodape</footer>
     </main>
+    <footer class="rodape">Todos os direitos reservados &copy; 2021</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
